[package]
name = "leetcode-solutions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_sum"
path = "src/problems/two_sum.rs"

[[bin]]
name = "group_anagrams"
path = "src/problems/group_anagrams.rs"

[[bin]]
name = "longest_consecutive_sequence"
path = "src/problems/longest_consecutive_sequence.rs"

[[bin]]
name = "move_zeroes"
path = "src/problems/move_zeroes.rs"

[[bin]]
name = "container_with_most_water"
path = "src/problems/container_with_most_water.rs"

[[bin]]
name = "three_sum"
path = "src/problems/three_sum.rs"

[[bin]]
name = "find_anagrams"
path = "src/problems/find_anagrams.rs"

[[bin]]
name = "subarray_sum"
path = "src/problems/subarray_sum.rs"

[[bin]]
name = "max_sliding_window"
path = "src/problems/max_sliding_window.rs"

[dependencies]
