[package]
name = "leetcode-solutions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_sum"
path = "src/problems/two_sum.rs"

[[bin]]
name = "group_anagrams"
path = "src/problems/group_anagrams.rs"

[[bin]]
name = "longest_consecutive_sequence"
path = "src/problems/longest_consecutive_sequence.rs"

[[bin]]
name = "move_zeroes"
path = "src/problems/move_zeroes.rs"

[[bin]]
name = "container_with_most_water"
path = "src/problems/container_with_most_water.rs"

[[bin]]
name = "three_sum"
path = "src/problems/three_sum.rs"

[[bin]]
name = "find_anagrams"
path = "src/problems/find_anagrams.rs"

[[bin]]
name = "subarray_sum"
path = "src/problems/subarray_sum.rs"

[[bin]]
name = "max_sliding_window"
path = "src/problems/max_sliding_window.rs"

[[bin]]
name = "minimum_window_substring"
path = "src/problems/minimum_window_substring.rs"

[[bin]]
name = "merge_intervals"
path = "src/problems/merge_intervals.rs"

[[bin]]
name = "rotate-array"
path = "src/problems/rotate-array.rs"

[[bin]]
name = "product_except_self"
path = "src/problems/product_except_self.rs"

[[bin]]
name = "first_missing_positive"
path = "src/problems/first_missing_positive.rs"

[[bin]]
name = "set_matrix_zeroes"
path = "src/problems/set_matrix_zeroes.rs"

[[bin]]
name = "spiral_matrix"
path = "src/problems/spiral_matrix.rs"

[[bin]]
name = "rotate_matrix"
path = "src/problems/rotate_matrix.rs"

[[bin]]
name = "search_matrix"
path = "src/problems/search_matrix.rs"

[[bin]]
name = "search_insert"
path = "src/problems/search_insert.rs"

[[bin]]
name = "permutations"
path = "src/problems/permutations.rs"

[[bin]]
name = "subsets"
path = "src/problems/subsets.rs"

[dependencies]
