[package]
name = "leetcode-solutions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_sum"
path = "src/problems/two_sum.rs"

[[bin]]
name = "group_anagrams"
path = "src/problems/group_anagrams.rs"

[[bin]]
name = "longest_consecutive_sequence"
path = "src/problems/longest_consecutive_sequence.rs"

[[bin]]
name = "move_zeroes"
path = "src/problems/move_zeroes.rs"

[[bin]]
name = "container_with_most_water"
path = "src/problems/container_with_most_water.rs"

[[bin]]
name = "three_sum"
path = "src/problems/three_sum.rs"

[[bin]]
name = "find_anagrams"
path = "src/problems/find_anagrams.rs"

[[bin]]
name = "subarray_sum"
path = "src/problems/subarray_sum.rs"

[[bin]]
name = "max_sliding_window"
path = "src/problems/max_sliding_window.rs"

[[bin]]
name = "minimum_window_substring"
path = "src/problems/minimum_window_substring.rs"

[[bin]]
name = "merge_intervals"
path = "src/problems/merge_intervals.rs"

[[bin]]
name = "rotate-array"
path = "src/problems/rotate-array.rs"

[[bin]]
name = "product_except_self"
path = "src/problems/product_except_self.rs"

[[bin]]
name = "first_missing_positive"
path = "src/problems/first_missing_positive.rs"

[[bin]]
name = "set_matrix_zeroes"
path = "src/problems/set_matrix_zeroes.rs"

[[bin]]
name = "spiral_matrix"
path = "src/problems/spiral_matrix.rs"

[[bin]]
name = "rotate_matrix"
path = "src/problems/rotate_matrix.rs"

[[bin]]
name = "search_matrix"
path = "src/problems/search_matrix.rs"

[[bin]]
name = "search_insert"
path = "src/problems/search_insert.rs"

[[bin]]
name = "permutations"
path = "src/problems/permutations.rs"

[[bin]]
name = "subsets"
path = "src/problems/subsets.rs"

[[bin]]
name = "letter_combinations"
path = "src/problems/letter_combinations.rs"

[[bin]]
name = "combination_sum"
path = "src/problems/combination_sum.rs"

[[bin]]
name = "triangle"
path = "src/problems/triangle.rs"

[[bin]]
name = "house_robber"
path = "src/problems/house_robber.rs"

[[bin]]
name = "perfect_squares"
path = "src/problems/perfect_squares.rs"

[[bin]]
name = "coin_change"
path = "src/problems/coin_change.rs"

[[bin]]
name = "word_break"
path = "src/problems/word_break.rs"

[[bin]]
name = "max_product"
path = "src/problems/max_product.rs"

[[bin]]
name = "partition_equal_subset_sum"
path = "src/problems/partition_equal_subset_sum.rs"

[[bin]]
name = "longest_valid_parentheses"
path = "src/problems/longest_valid_parentheses.rs"

[[bin]]
name = "max_profit"
path = "src/problems/max_profit.rs"

[[bin]]
name = "jump_game"
path = "src/problems/jump_game.rs"

[[bin]]
name = "jump_game_ii"
path = "src/problems/jump_game_ii.rs"

[[bin]]
name = "partition_labels"
path = "src/problems/partition_labels.rs"

[[bin]]
name = "word_search"
path = "src/problems/word_search.rs"

[[bin]]
name = "valid_parentheses"
path = "src/problems/valid_parentheses.rs"

[[bin]]
name = "palindrome_partitioning"
path = "src/problems/palindrome_partitioning.rs"

[[bin]]
name = "min_stack"
path = "src/problems/min_stack.rs"

[[bin]]
name = "decode_string"
path = "src/problems/decode_string.rs"

[[bin]]
name = "daily_temperatures"
path = "src/problems/daily_temperatures.rs"

[[bin]]
name = "largest_rectangle_area"
path = "src/problems/largest_rectangle_area.rs"

[[bin]]
name = "single_number"
path = "src/problems/single_number.rs"

[[bin]]
name = "majority_element"
path = "src/problems/majority_element.rs"

[[bin]]
name = "sort_colors"
path = "src/problems/sort_colors.rs"

[[bin]]
name = "palindromic_substrings"
path = "src/problems/palindromic_substrings.rs"

[[bin]]
name = "find_kth_largest"
path = "src/problems/find_kth_largest.rs"

[dependencies]
